Add schema browser and schema-only backups
